--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/KFUPM-Maps/Backend#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
